--- a/appview/pages/templates/repo/issues/fragments/issueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/issueComment.html
@@ -2,8 +2,7 @@
   {{ with .Comment }}
   <div id="comment-container-{{.CommentId}}">
     <div class="flex items-center gap-2 mb-2 text-gray-500 dark:text-gray-400 text-sm flex-wrap">
-      {{ $owner := index $.DidHandleMap .OwnerDid }}
-      {{ template "user/fragments/picHandleLink" $owner }}
+      {{ template "user/fragments/picHandleLink" .OwnerDid }}
 
       <!-- show user "hats" -->
       {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
