appview: pages: update pr compare fork page
Show fork titles in owner/repo format, otherwise if you have collaborator
access to multiple forks of the same repo (in which the forks have the
same title) it may be hard to differentiate

Also update the underlying logic to use the option value instead of
checking against the currently logged in users DID

Co-Authored-By: oppiliappan <me@oppi.li>
Signed-off-by: Samuel Shuert <me@thecoded.prof>

--- a/appview/pages/templates/repo/pulls/fragments/pullCompareForks.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullCompareForks.html
@@ -19,8 +19,8 @@
                 >
                     <option disabled selected>select a fork</option>
                     {{ range .Forks }}
-                        <option value="{{ .Name }}" {{ if eq .Name $.Selected }}selected{{ end }} class="py-1">
-                            {{ .Name }}
+                        <option value="{{ .Did }}/{{ .Name }}" {{ if eq .Name $.Selected }}selected{{ end }} class="py-1">
+                            {{ .Did | resolve }}/{{ .Name }}
                         </option>
                     {{ end }}
                 </select>
