appview/pages: improve signup page copy
hopefully people use their existing handles now

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/user/signup.html
+++ b/appview/pages/templates/user/signup.html
@@ -42,7 +42,7 @@
                     </button>
                 </form>
                 <p class="text-sm text-gray-500">
-                  Already have an account? <a href="/login" class="underline">Login to Tangled</a>.
+                  Already have an ATProto account? <a href="/login" class="underline">Login to Tangled</a>.
                 </p>
 
                 <p id="signup-msg" class="error w-full"></p>
