--- a/appview/pages/templates/user/fragments/profileCard.html
+++ b/appview/pages/templates/user/fragments/profileCard.html
@@ -1,4 +1,5 @@
 {{ define "user/fragments/profileCard" }}
+  {{ $userIdent := didOrHandle .UserDid .UserHandle }}
   <div class="bg-white dark:bg-gray-800 px-6 py-4 rounded drop-shadow-sm max-h-fit">
     <div class="grid grid-cols-3 md:grid-cols-1 gap-1 items-center">
       <div id="avatar" class="col-span-1 flex justify-center items-center">
@@ -8,15 +9,15 @@
       </div>
       <div class="col-span-2">
         <div class="flex items-center flex-row flex-nowrap gap-2">
-          <p title="{{ didOrHandle .UserDid .UserHandle }}"
+          <p title="{{ $userIdent }}"
           class="text-lg font-bold dark:text-white overflow-hidden text-ellipsis whitespace-nowrap">
-            {{ didOrHandle .UserDid .UserHandle }}
+            {{ $userIdent }}
           </p>
-          <a href="/{{ didOrHandle .UserDid .UserHandle }}/feed.atom">{{ i "rss" "size-4" }}</a>
+          <a href="/{{ $userIdent }}/feed.atom">{{ i "rss" "size-4" }}</a>
         </div>
 
         <div class="md:hidden">
-          {{ block "followerFollowing" (list .Followers .Following) }} {{ end }}
+          {{ block "followerFollowing" (list . $userIdent) }} {{ end }}
         </div>
       </div>
       <div class="col-span-3 md:col-span-full">
@@ -29,7 +30,7 @@
           {{ end }}
 
           <div class="hidden md:block">
-            {{ block "followerFollowing" (list $.Followers $.Following) }} {{ end }}
+            {{ block "followerFollowing" (list $ $userIdent) }} {{ end }}
           </div>
 
           <div class="flex flex-col gap-2 mb-2 overflow-hidden text-ellipsis whitespace-nowrap max-w-full"> 
@@ -42,7 +43,7 @@
             {{ if .IncludeBluesky }}
             <div class="flex items-center gap-2">
               <span class="flex-shrink-0">{{ template "user/fragments/bluesky" "w-4 h-4 text-black dark:text-white" }}</span>
-              <a id="bluesky-link" href="https://bsky.app/profile/{{ $.UserDid }}">{{ didOrHandle $.UserDid $.UserHandle }}</a>
+              <a id="bluesky-link" href="https://bsky.app/profile/{{ $.UserDid }}">{{ $userIdent }}</a>
             </div>
             {{ end }}
             {{ range $link := .Links }}
@@ -88,13 +89,15 @@
 {{ end }}
 
 {{ define "followerFollowing" }}
-  {{ $followers := index . 0 }}
-  {{ $following := index . 1 }}
-  <div class="flex items-center gap-2 my-2 overflow-hidden text-ellipsis whitespace-nowrap max-w-full text-sm">
-    <span class="flex-shrink-0">{{ i "users" "size-4" }}</span>
-    <span id="followers">{{ $followers }} followers</span>
-    <span class="select-none after:content-['·']"></span>
-    <span id="following">{{ $following }} following</span>
-  </div>
+  {{ $root := index . 0 }}
+  {{ $userIdent := index . 1 }}
+  {{ with $root }}
+    <div class="flex items-center gap-2 my-2 overflow-hidden text-ellipsis whitespace-nowrap max-w-full text-sm">
+      <span class="flex-shrink-0">{{ i "users" "size-4" }}</span>
+      <span id="followers"><a href="/{{ $userIdent }}?tab=followers">{{ .FollowersCount }} followers</a></span>
+      <span class="select-none after:content-['·']"></span>
+      <span id="following"><a href="/{{ $userIdent }}?tab=following">{{ .FollowingCount }} following</a></span>
+    </div>
+  {{ end }}
 {{ end }}
 
