appview/strings: add timeline page
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/strings/string.html
+++ b/appview/pages/templates/strings/string.html
@@ -77,7 +77,7 @@
         {{ end }}
       </div>
     </div>
-    <div class="overflow-auto relative">
+    <div class="overflow-x-auto overflow-y-hidden relative">
       {{ if .ShowRendered }}
       <div id="blob-contents" class="prose dark:prose-invert">{{ .RenderedContents }}</div>
       {{ else }}
