--- a/appview/pages/templates/strings/fragments/form.html
+++ b/appview/pages/templates/strings/fragments/form.html
@@ -31,8 +31,9 @@
       name="content" 
       id="content-textarea"
       wrap="off"
-      class="w-full dark:bg-gray-700 dark:text-white dark:border-gray-600 dark:placeholder-gray-400"
+      class="w-full dark:bg-gray-700 dark:text-white dark:border-gray-600 dark:placeholder-gray-400 font-mono"
       rows="20"
+      spellcheck="false"
       placeholder="Paste your string here!"
       required>{{ .String.Contents }}</textarea>
     <div class="flex justify-between items-center">
