appview: ui: signify forks with icon, adjust layout
non-forked repos show a book icon, forked repos show a fork icon

Signed-off-by: Samuel Newman <mozzius@protonmail.com>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -5,7 +5,7 @@
       {{ if .RepoInfo.Source }}
       <p class="text-sm">
       <div class="flex items-center">
-          {{ i "git-fork" "w-3 h-3 mr-1"}}
+          {{ i "git-fork" "w-3 h-3 mr-1 shrink-0" }}
           forked from
           {{ $sourceOwner := didOrHandle .RepoInfo.Source.Did .RepoInfo.SourceHandle  }}
           <a class="ml-1 underline" href="/{{ $sourceOwner }}/{{ .RepoInfo.Source.Name }}">{{ $sourceOwner }}/{{ .RepoInfo.Source.Name }}</a>
