--- a/appview/pages/templates/user/fragments/repoCard.html
+++ b/appview/pages/templates/user/fragments/repoCard.html
@@ -4,8 +4,13 @@
   {{ $fullName := index . 2 }}
 
   {{ with $repo }}
-    <div class="py-4 px-6 drop-shadow-sm rounded bg-white dark:bg-gray-800">
-      <div class="font-medium dark:text-white flex gap-2 items-center">
+    <div class="py-4 px-6 gap-2 flex flex-col drop-shadow-sm rounded bg-white dark:bg-gray-800">
+      <div class="font-medium dark:text-white flex items-center">
+        {{ if .Source }}
+          {{ i "git-fork" "w-4 h-4 mr-1.5 shrink-0" }}
+        {{ else }}
+          {{ i "book-marked" "w-4 h-4 mr-1.5 shrink-0" }}
+        {{ end }}
         {{- if $fullName -}}
           <a href="/{{ index $root.DidHandleMap .Did }}/{{ .Name }}"
             >{{ index $root.DidHandleMap .Did }}/{{ .Name }}</a
@@ -16,12 +21,6 @@
           >
         {{- end -}}
       </div>
-      {{ if .Source }}
-        <div class="flex items-center my-0.5 text-sm">
-          {{ i "git-fork" "w-3 h-3 mr-1" }}
-          fork
-        </div>
-      {{ end }}
       {{ with .Description }}
         <div class="text-gray-600 dark:text-gray-300 text-sm">
           {{ . }}
@@ -36,13 +35,11 @@
 {{ end }}
 
 {{ define "repoStats" }}
-  <div class="text-gray-400 pt-4 text-sm font-mono inline-flex gap-4 mt-auto">
+  <div class="text-gray-400 text-sm font-mono inline-flex gap-4 mt-auto">
     {{ with .Language }}
       <div class="flex gap-2 items-center text-sm">
-        <div
-          class="size-2 rounded-full"
-          style="background: radial-gradient(circle at 35% 35%, color-mix(in srgb, {{ langColor . }} 70%, white), {{ langColor . }} 30%, color-mix(in srgb, {{ langColor . }} 85%, black));"
-        ></div>
+        <div class="size-2 rounded-full"
+          style="background: radial-gradient(circle at 35% 35%, color-mix(in srgb, {{ langColor . }} 70%, white), {{ langColor . }} 30%, color-mix(in srgb, {{ langColor . }} 85%, black));"></div>
         <span>{{ . }}</span>
       </div>
     {{ end }}
