--- a/appview/pages/templates/repo/fragments/fileTree.html
+++ b/appview/pages/templates/repo/fragments/fileTree.html
@@ -3,8 +3,8 @@
     <details open>
       <summary class="cursor-pointer list-none pt-1">
         <span class="tree-directory inline-flex items-center gap-2 ">
-          {{ i "folder" "size-4 fill-current" }}
-          <span class="filename text-black dark:text-white">{{ .Name }}</span>
+          {{ i "folder" "flex-shrink-0 size-4 fill-current" }}
+          <span class="filename truncate text-black dark:text-white">{{ .Name }}</span>
         </span>
       </summary>
       <div class="ml-1 pl-2 border-l border-gray-200 dark:border-gray-700">
@@ -15,8 +15,8 @@
     </details>
   {{ else if .Name }}
     <div class="tree-file flex items-center gap-2 pt-1">
-      {{ i "file" "size-4" }}
-      <a href="#file-{{ .Path }}" class="filename text-black dark:text-white no-underline hover:underline">{{ .Name }}</a>
+      {{ i "file" "flex-shrink-0 size-4" }}
+      <a href="#file-{{ .Path }}" class="filename truncate text-black dark:text-white no-underline hover:underline">{{ .Name }}</a>
     </div>
   {{ else }}
     {{ range $child := .Children }}
