input.css: fix list items missing bullets
- `inline-block` on li was too general, this only applies on
  `li:has(input)` now
- all styles have been moved to input.css and apply only to children of
  prose

Signed-off-by: oppiliappan <me@oppi.li>

--- a/input.css
+++ b/input.css
@@ -102,6 +102,18 @@
           disabled:before:bg-green-400 dark:disabled:before:bg-green-600;
         }
 
+        .prose li:has(input) {
+          list-style: none;
+        }
+
+        .prose li {
+          @apply my-0 py-0;
+        }
+
+        .prose ul, .prose ol {
+          @apply my-1 py-0;
+        }
+
         .prose img {
             display: inline;
             margin: 0;
