--- a/input.css
+++ b/input.css
@@ -146,7 +146,7 @@
 /* PreWrapper */
 .chroma {
     color: #4c4f69;
-    background-color: #eff1f5;
+    background-color: #00000000;
 }
 /* Error */
 .chroma .err {
@@ -483,7 +483,6 @@
     /* PreWrapper */
     .chroma {
         color: #cad3f5;
-        background-color: #24273a;
     }
     /* Error */
     .chroma .err {
