--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -144,7 +144,8 @@
           {{ end }}
           <a href="{{ $link }}" class="{{ $linkstyle }}">
             <div class="flex items-center gap-2">
-              {{ i $icon $iconStyle }}{{ .Name }}
+              {{ i $icon $iconStyle "flex-shrink-0" }}
+              <span class="truncate">{{ .Name }}</span>
             </div>
           </a>
         </div>
@@ -210,7 +211,7 @@
       </div>
 
       <!-- commit info bar -->
-      <div class="text-xs mt-2 text-gray-500 dark:text-gray-400 flex items-center">
+      <div class="text-xs mt-2 text-gray-500 dark:text-gray-400 flex items-center flex-wrap">
           {{ $verified := $.VerifiedCommits.IsVerified .Hash.String }}
           {{ $hashStyle := "text-gray-700 dark:text-gray-300 bg-gray-100 dark:bg-gray-900" }}
           {{ if $verified }}
@@ -280,28 +281,28 @@
       </a>
       <div class="flex flex-col gap-1">
         {{ range .BranchesTrunc }}
-        <div class="text-base flex items-center justify-between">
-          <div class="flex items-center gap-2">
+        <div class="text-base flex items-center justify-between overflow-hidden">
+          <div class="flex items-center gap-2 min-w-0 flex-1">
             <a href="/{{ $.RepoInfo.FullName }}/tree/{{ .Reference.Name | urlquery }}"
-              class="inline no-underline hover:underline dark:text-white">
+              class="inline-block truncate no-underline hover:underline dark:text-white">
               {{ .Reference.Name }}
             </a>
             {{ if .Commit }}
-            <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·']"></span>
-              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .Commit.Committer.When }}</span>
+            <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·'] shrink-0"></span>
+            <span class="whitespace-nowrap text-xs text-gray-500 dark:text-gray-400 shrink-0">{{ template "repo/fragments/time" .Commit.Committer.When }}</span>
             {{ end }}
             {{ if .IsDefault }}
-            <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·']"></span>
-            <span class="bg-gray-200 dark:bg-gray-700 rounded py-1/2 px-1 text-xs font-mono">default</span>
+            <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·'] shrink-0"></span>
+            <span class="bg-gray-200 dark:bg-gray-700 rounded py-1/2 px-1 text-xs font-mono shrink-0">default</span>
             {{ end }}
           </div>
           {{ if ne $.Ref .Reference.Name }}
             <a href="/{{ $.RepoInfo.FullName }}/compare/{{ $.Ref | urlquery }}...{{ .Reference.Name | urlquery }}"
-              class="text-xs flex gap-2 items-center"
+              class="text-xs flex gap-2 items-center shrink-0 ml-2"
               title="Compare branches or tags">
               {{ i "git-compare" "w-3 h-3" }} compare
             </a>
-          {{end}}
+          {{ end }}
         </div>
         {{ end }}
       </div>
