--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -54,24 +54,24 @@
 
     {{ range .Files }}
       <div class="grid grid-cols-12 gap-4 items-center py-1">
-        <div class="col-span-6 md:col-span-3">
+        <div class="col-span-6 md:col-span-4">
           {{ $link := printf "/%s/%s/%s/%s/%s" $.RepoInfo.FullName "tree" (urlquery $.Ref) $.TreePath .Name }}
           {{ $icon := "folder" }}
           {{ $iconStyle := "size-4 fill-current" }}
 
           {{ if .IsFile }}
             {{ $icon = "file" }}
-            {{ $iconStyle = "flex-shrink-0 size-4" }}
+            {{ $iconStyle = "size-4" }}
           {{ end }}
           <a href="{{ $link }}" class="{{ $linkstyle }}">
             <div class="flex items-center gap-2">
-              {{ i $icon $iconStyle }}
+              {{ i $icon $iconStyle "flex-shrink-0" }}
               <span class="truncate">{{ .Name }}</span>
             </div>
           </a>
         </div>
 
-        <div class="col-span-0 md:col-span-7 hidden md:block overflow-hidden">
+        <div class="col-span-0 md:col-span-6 hidden md:block overflow-hidden">
           {{ with .LastCommit }}
             <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400 block truncate">{{ .Message }}</a>
           {{ end }}
