--- a/input.css
+++ b/input.css
@@ -72,7 +72,7 @@
         }
 
         code {
-            @apply px-1 font-mono rounded bg-gray-100 dark:bg-gray-700;
+            @apply font-mono rounded bg-gray-100 dark:bg-gray-700;
         }
     }
 
