appview/oauth: return to original page after login-block
when attempting to do an authorized request while logged-out, the auth
middleware boots the user to the login page. this page now keeps track
of the 'Referer' in the oauth request. once the oauth callback is
complete, the user is sent back to the page they came from.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -41,6 +41,7 @@
                             your Tangled (<code>.tngl.sh</code>) or <a href="https://bsky.app">Bluesky</a> (<code>.bsky.social</code>) account.
                         </span>
                     </div>
+                    <input type="hidden" name="return_url" value="{{ .ReturnUrl }}">
 
                     <button
                         class="btn w-full my-2 mt-6 text-base "
